Se actualiza el repositorio corrigiendo la descripción principal y agregando conocimiento de bases de datos

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
             <div class="col-6">
                 <div class="card-body">
-                    <p>Me considero una persona creativa, también me considero una persona centrada,  con ganas de aprender, superar mis metas y ayudar a los demás.</p>
+                    <p>Me considero una persona creativa, también soy una persona centrada,  con ganas de aprender, superar mis metas y ayudar a los demás.</p>
                 </div>
             </div>
         </div>
@@ -98,6 +98,11 @@
                             <div class="col-12">
                                 <h5>Backend</h5>
                                 <p>PHP, Django, Linux</p>
+                            </div>
+
+                            <div class="col-12">
+                                <h5>Base de datos</h5>
+                                <p>SQL Server, MySQL</p>
                             </div>
                             
                         </div>
