Se suben cambios para actualizar algunos datos dentro del repositorio

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <ul>
                                 <li>
                                     <div class="col-12"><h4>Ingeniería Informática.</h4></div>
-                                    <div class="col-12"><h6>Enero 2020 - Actualidad </h6></div>
+                                    <div class="col-12"><h6>Enero 2020 - A la fecha </h6></div>
                                     <div class="col-12"><h5>Centro Universitario de Ciencas Exactas e Ingenierías</h5></div>
                                 </li>
                             </ul>
@@ -60,7 +60,7 @@
                                     <div class="col-12"><h4>Scrum Fundamentals Certified (SFC™)</h4></div>
                                     <div class="col-12"><h6>Desde Febrero 2023</h6></div>
                                     <div class="col-12">
-                                        <p>https://www.scrumstudy.com/certification/verify?type=SFC&number=965608</p>
+                                        <a href="https://www.scrumstudy.com/certification/verify?type=SFC&number=965608"> Certificación SCRUM </a>
                                     </div>
                                 </li>
                             </ul>
@@ -80,8 +80,8 @@
                         <ul>
                             <li>
                                 <h5>Desarrollador Junior</h5>
-                                <p><b>Febrero 2023 - Actualmente</b></p>
-                                <p>Encargado de realizar correcciones y actializaciones a las diferentes plataformas que tiene la empresa. Además de la creación de un sistema que permite copiar y pegar información con la tecnología Selenium. </p>
+                                <p><b>Febrero del 2023 - Marzo del 2024</b></p>
+                                <p>Encargado de realizar correcciones y actializaciones al CRM, ERP y diferentes plataformas que tiene la empresa. Además de la creación de un sistema que permite copiar y pegar información de un sitio a otro con la tecnología Selenium. </p>
                             </li>
                             <li>
                                 <h5>Soporte técnico y sistemas</h5>
@@ -137,7 +137,7 @@
                     <div class="col-4">                       
                         <div class="row">
                             <div class="col-1"><img src="src/img/ubicacion.png" alt=""></div>
-                            <div class="col-11"><p>Guadalajara Jalisco, México</p></div>
+                            <div class="col-11"><p>Tonalá Jalisco, México CP:45410</p></div>
                         </div>
                     </div>                 
                 </div>
